--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,14 +29,14 @@ jobs:
           config_timezone: America/New_York
           plugin_habits: yes
           plugin_habits_charts_type: classic
-          plugin_habits_days: 90
+          plugin_habits_days: 7
           plugin_habits_facts: yes
-          plugin_habits_from: 90
-          plugin_habits_languages_limit: 8
-          plugin_habits_languages_threshold: 0%
+          plugin_habits_from: 7
+          plugin_habits_languages_limit: 4
+          plugin_habits_languages_threshold: 2%
           plugin_habits_trim: yes
-          plugin_wakatime_days: 90
-          plugin_wakatime_limit: 5
+          plugin_wakatime_days: 7
+          plugin_wakatime_limit: 6
           plugin_wakatime_repositories_visibility: all
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
@@ -55,7 +55,9 @@ jobs:
 
           # https://github.com/lowlighter/metrics/blob/master/source/plugins/languages/README.md
           plugin_languages: yes
-          plugin_languages_limit: 0
+          plugin_languages_limit: 3
+          plugin_languages_colors: rainbow
+          plugin_languages_threshold: 2%
           # Visit https://github.com/lowlighter/metrics#-documentation for full reference
           template: classic
           base_indepth: yes
