--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,7 +28,7 @@ jobs:
           config_display: columns
           config_timezone: America/New_York
           plugin_habits: yes
-          plugin_habits_charts_type: classic
+          plugin_habits_charts_type: chartist
           plugin_habits_days: 7
           plugin_habits_facts: yes
           plugin_habits_from: 7
@@ -59,7 +59,7 @@ jobs:
           plugin_languages_colors: rainbow
           plugin_languages_threshold: 2%
           # Visit https://github.com/lowlighter/metrics#-documentation for full reference
-          template: classic
+          template: repository
           base_indepth: yes
           config_octicon: yes
           plugin_repositories: yes
