--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,16 +24,15 @@ jobs:
           committer_message: "[metrics] update metrics"
           optimize: css, xml, svg
           experimental_features: --optimize-svg
-          config_display: columns
           config_timezone: America/New_York
           plugin_habits: yes
-          plugin_habits_charts_type: chartist
+          plugin_habits_charts_type: classic
           plugin_habits_days: 7
           plugin_habits_facts: yes
           plugin_habits_from: 7
           plugin_habits_languages_limit: 4
           plugin_habits_languages_threshold: 2%
-          plugin_habits_trim: yes
+          plugin_habits_trim: no
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 6
           plugin_wakatime_repositories_visibility: all
@@ -41,7 +40,7 @@ jobs:
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: current
           # https://github.com/lowlighter/metrics/blob/master/source/plugins/isocalendar/README.md
-          plugin_isocalendar: yes
+          plugin_isocalendar: no
           plugin_isocalendar_duration: half-year
 
           # https://github.com/lowlighter/metrics/blob/master/source/plugins/calendar/README.md
@@ -49,17 +48,17 @@ jobs:
           plugin_calendar_limit: 0
 
           # https://github.com/lowlighter/metrics/blob/master/source/plugins/achievements/README.md
-          plugin_achievements: true
+          plugin_achievements: no
           plugin_achievements_ignored: automater, stargazer, forker, gister # developer, member, explorer, infographile
 
           # https://github.com/lowlighter/metrics/blob/master/source/plugins/languages/README.md
-          plugin_languages: yes
+          plugin_languages: no
           plugin_languages_limit: 3
           plugin_languages_colors: rainbow
           plugin_languages_threshold: 2%
           # Visit https://github.com/lowlighter/metrics#-documentation for full reference
           template: classic
-          base_indepth: yes
+          base_indepth: no
           config_octicon: yes
           plugin_repositories: yes
           plugin_repositories_order: featured, pinned, starred, random
